welcome.lessons.welcome.loopwhile.BaggleSeeker.scala.error
BaggleSeeker:10: error: Invalid literal number
        for (i<-1to s ){
                ^BaggleSeeker:14: error: ')' expected but '}' found.
	}
        ^